Loading media icons, form redesign, member animations

--- a/about.html
+++ b/about.html
@@ -7,28 +7,29 @@
         <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/common/general.css">
+        <link rel="stylesheet" href="../styling/common/transition.css">
         <link rel="stylesheet" href="../styling/page/about.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-        <script src="../script/general.js" defer></script>
+        <script src="../script/general.js"></script>
     </head>
-    <body class="fade">
+    <body>
         <header></header>
         <main>
             <div class="main-container">
-                <div class="title-wrapper">
-                    <h3 class="page-title">About Us</h3>
-                    <hr class="title-divider">
+                <div class="main-wrapper">
+                    <div class="title-wrapper transition-1">
+                        <h3 class="page-title">About Us</h3>
+                        <hr class="title-divider">
+                    </div>
+                    <p class="flex-element transition-2">Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB</p><br>
+                    <p class="flex-element transition-2">
+                        <em>NE</em> stands "any" <br><br>
+                        <em>VER</em> means "version"<br><br>
+                        We come together to create "any version" of various dance performances in different styles. 
+                        Just like how fast the moon phases, our dancers adapt and learn quickly 
+                    </p>
+                    <img class="group-picture transition-3" src="../images/group.jpg" alt="group photo">
                 </div>
-                <p class="flex-element">Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB</p><br>
-                <p class="flex-element">
-                    <em>NE</em> stands "any" <br><br>
-                    <em>VER</em> means "version"<br><br>
-                    We come together to create "any version" of various dance performances in different styles. 
-                    Just like how fast the moon phases, our dancers adapt and learn quickly 
-                </p>
-                <!-- <div class="photo-wrapper"> -->
-                    <img class="group-picture" src="../images/group.jpg" alt="group photo">
-                <!-- </div> -->
             </div>
         </main>
         <footer></footer>
