--- a/audition.html
+++ b/audition.html
@@ -7,30 +7,35 @@
         <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/common/general.css">
+        <link rel="stylesheet" href="../styling/common/transition.css">
         <link rel="stylesheet" href="../styling/common/buttons.css">
         <link rel="stylesheet" href="../styling/common/links.css">
         <link rel="stylesheet" href="../styling/page/audition.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-        <script src="../script/general.js" defer></script>
+        <script src="../script/general.js"></script>
     </head>
     <body class="fade">
         <header></header>
         <main>
             <div class="main-container">
                 <div class="main-wrapper">
-                    <h3 class="page-title">Audition</h3>
-                    <hr class="title-divider">
-                    <p>We are always looking for new members!</p>
-                    <p>Before applying, check out our 
-                        <a class="faq-link text-link" href="faq.html">FAQ</a>!
-                    </p><br><br>
-                    <p><b>Minimum Requirement</b></p>
-                    <p>You will be required to submit a video clip of you dancing</p>
-                    <p>must be at least 1 minute</p>
-                    <div class="button-container">
+                    <div class="title-wrapper transition-1">
+                        <h3 class="page-title">Audition</h3>
+                        <hr class="title-divider">
+                    </div>
+                    <div class="transition-wrapper transition-2">
+                        <p>We are always looking for new members!</p>
+                        <p>Before applying, check out our 
+                            <a class="faq-link text-link" href="faq.html">FAQ</a>!
+                        </p><br><br>
+                        <p><b>Minimum Requirement</b></p>
+                        <p>You will be required to submit a video clip of you dancing</p>
+                        <p>must be at least 1 minute</p>
+                    </div>
+                    <div class="button-container transition-2">
                         <button class="audition-button stylized-button" onclick="window.location.href='auditionform.html'">apply now</button>
                     </div><br>
-                    <div class="picture-wrapper">
+                    <div class="picture-wrapper transition-3">
                         <img class="studio-pic" src="./images/studio.jpg">
                     </div>
                 </div>
