--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <link rel="stylesheet" href="../styling/common/general.css">
         <link rel="stylesheet" href="../styling/page/index.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-        <script src="../script/general.js" defer></script>
+        <script src="../script/general.js"></script>
     </head>
     <body class="fade">
         <header></header>
         <main>
+            <div class="loading-icon"></div>
             <div class="main-container">
                 <div class="introduction-container">
                     <h4>Check out our lastest cover!</h4>
