--- a/members.html
+++ b/members.html
@@ -7,9 +7,11 @@
         <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/common/general.css">
+        <link rel="stylesheet" href="../styling/common/transition.css">
         <link rel="stylesheet" href="../styling/page/members.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-        <script src="../script/general.js" defer></script>
+        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+        <script src="../script/general.js"></script>
         <script src="../script/data/covers.js" defer></script>
         <script src="../script/members.js" defer></script>
     </head>
@@ -17,46 +19,117 @@
         <header></header>
         <main>
             <div class="main-container">
-                <h3 class="page-title">Members</h3>
-                <p>Meet our expressive team!</p>
-                <hr class="title-divider">
-                <div class="member-container">
-                    <div class="member"><img tabindex="0" member="Kyle T." src="../images/members/Paolo.jpg"><p>Kyle T.</p></div>
-                    <div class="member"><img tabindex="0" member="Francine" src="../images/members/Francine.jpg"><p>Francine</p></div>
-                    <div class="member"><img tabindex="0" member="Jacky" src="../images/members/Jacky.jpg"><p>Jacky</p></div>
-                    <div class="member"><img tabindex="0" member="Justin" src="../images/members/Justin.jpg"><p>Justin</p></div>
-                    <div class="member"><img tabindex="0" member="Ian" src="../images/members/Ian.jpg"><p>Ian</p></div>
-                    <div class="member"><img tabindex="0" member="Julia" src="../images/members/Julia.jpg"><p>Julia</p></div>
-                    <div class="member"><img tabindex="0" member="Christine" src="../images/members/any.jpg"><p>Christine</p></div>
-                    <div class="member"><img tabindex="0" member="Stephanie W." src="../images/members/any.jpg"><p>Stephanie W.</p></div>
-                    <div class="member"><img tabindex="0" member="Angelina" src="../images/members/any.jpg"><p>Angelina</p></div>
-                    <div class="member"><img tabindex="0" member="Kyara" src="../images/members/Kyara.jpg"><p>Kyara</p></div>
-                    <div class="member"><img tabindex="0" member="AJ" src="../images/members/AJ.jpg"><p>AJ</p></div>
-                    <div class="member"><img tabindex="0" member="Stephanie D." src="../images/members/Steph_D.jpg"><p>Stephanie D.</p></div>
-                    <div class="member"><img tabindex="0" member="Tracey" src="../images/members/Tracey.jpg"><p>Tracey</p></div>
-                    <div class="member"><img tabindex="0" member="Melody" src="../images/members/Melody.jpg"><p>Melody</p></div>
-                    <div class="member"><img tabindex="0" member="Nicky" src="../images/members/Nicky.jpg"><p>Nicky</p></div>
-                    <div class="member"><img tabindex="0" member="Nicole" src="../images/members/Nicole.jpg"><p>Nicole</p></div>
-                    <div class="member"><img tabindex="0" member="Kate" src="../images/members/Kate.jpg"><p>Kate</p></div>
-                    <div class="member"><img tabindex="0" member="Simone" src="../images/members/any.jpg"><p>Simone</p></div>
-                    <div class="member"><img tabindex="0" member="Izzie" src="../images/members/Izzie.jpg"><p>Izzie</p></div>
-                    <div class="member"><img tabindex="0" member="Chris" src="../images/members/Chris.jpg"><p>Chris</p></div>
-                    <div class="member"><img tabindex="0" member="Kyle L." src="../images/members/Kyle.jpg"><p>Kyle L.</p></div>
-                    <div class="member"><img tabindex="0" member="Andy" src="../images/members/any.jpg"><p>Andy</p></div>
-                    <div class="member"><img tabindex="0" member="Mico" src="../images/members/Mico.jpg"><p>Mico</p></div>
-                    <div class="member"><img tabindex="0" member="Hayley" src="../images/members/Hayley.jpg"><p>Hayley</p></div>
+                <div class="title-wrapper transition-1">
+                    <h3 class="page-title">Members</h3>
+                    <p>Meet our expressive team!</p>
+                    <hr class="title-divider">
+                </div>
+                <div class="member-container transition-2">
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Kyle T." src="../images/members/Paolo.jpg"></div>
+                        <p>Kyle T.</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Francine" src="../images/members/Francine.jpg"></div>
+                        <p>Francine</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Jacky" src="../images/members/Jacky.jpg"></div>
+                        <p>Jacky</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Justin" src="../images/members/Justin.jpg"></div>
+                        <p>Justin</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Ian" src="../images/members/Ian.jpg"></div>
+                        <p>Ian</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Julia" src="../images/members/Julia.jpg"></div>
+                        <p>Julia</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Christine" src="../images/members/any.jpg"></div>
+                        <p>Christine</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Stephanie W." src="../images/members/any.jpg"></div>
+                        <p>Stephanie W.</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Angelina" src="../images/members/any.jpg"></div>
+                        <p>Angelina</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Kyara" src="../images/members/Kyara.jpg"></div>
+                        <p>Kyara</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="AJ" src="../images/members/AJ.jpg"></div>
+                        <p>AJ</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Stephanie D." src="../images/members/Steph_D.jpg"></div>
+                        <p>Stephanie D.</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Tracey" src="../images/members/Tracey.jpg"></div>
+                        <p>Tracey</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Melody" src="../images/members/Melody.jpg"></div>
+                        <p>Melody</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Nicky" src="../images/members/Nicky.jpg"></div>
+                        <p>Nicky</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Nicole" src="../images/members/Nicole.jpg"></div>
+                        <p>Nicole</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Kate" src="../images/members/Kate.jpg"></div>
+                        <p>Kate</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Simone" src="../images/members/any.jpg"></div>
+                        <p>Simone</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Izzie" src="../images/members/Izzie.jpg"></div>
+                        <p>Izzie</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Chris" src="../images/members/Chris.jpg"></div>
+                        <p>Chris</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Kyle L." src="../images/members/Kyle.jpg"></div>
+                        <p>Kyle L.</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Andy" src="../images/members/any.jpg"></div>
+                        <p>Andy</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Mico" src="../images/members/Mico.jpg"></div>
+                        <p>Mico</p>
+                    </div>
+                    <div class="member">
+                        <div class="member-profile loading"><img tabindex="0" member="Hayley" src="../images/members/Hayley.jpg"></div>
+                        <p>Hayley</p>
+                    </div>
                 </div>
             </div>
         </main>
         <div class="modal">
-            <span class="close-modal">&times;</span>
             <div class="modal-container">
                 <img class="modal-image">
                 <div class="modal-name"></div>
-                <div class="modal-featured"><p class="featured">Covers Featured</p><hr class="feature-divider"></div>
-                <div class="modal-list">
-                    
-                </div>
+                <div class="modal-featured"><p class="featured">Covers Featured</p></div>
+                <div class="modal-list"></div>
             </div>
         </div>
         <footer class="footer-space"></footer>
