Form validations and script functions, reverted components

--- a/audition.html
+++ b/audition.html
@@ -15,7 +15,27 @@
         <script src="../script/general.js"></script>
     </head>
     <body class="fade">
-        <header></header>
+        <header>
+            <div class="header-container">
+                <div class="header-wrapper">
+                    <div class="navbar-toggle">
+                        <img class="navbar-icon" src="../images/icons/bars.png">
+                    </div>
+                    <div class="logo-container">
+                        <a href="index.html">
+                            <img src="../images/logos/never-transparent.png" alt="Never" class="header-logo">
+                        </a>
+                    </div>
+                </div>
+                <nav class="navbar-wrapper">
+                    <a class="nav-link" href="about.html">about us</a>
+                    <a class="nav-link" href="members.html">members</a>
+                    <a class="nav-link" href="audition.html">audition</a>
+                    <a class="nav-link" href="contact.html">contact us</a>
+                    <a class="nav-link" href="faq.html">faq</a>
+                </nav>
+            </div>
+        </header>
         <main>
             <div class="main-container">
                 <div class="main-wrapper">
@@ -36,11 +56,26 @@
                         <button class="audition-button stylized-button" onclick="window.location.href='auditionform.html'">apply now</button>
                     </div><br>
                     <div class="picture-wrapper transition-3">
-                        <img class="studio-pic" src="./images/studio.jpg">
+                        <img class="studio-pic" src="./images/studio.jpg" alt="Studio picture">
                     </div>
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="copyright">
+                &copy; 2020 Never Official
+            </div>
+            <div class="footer-links">
+                <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
+                    <img class="social-media-icon" icon="youtube" alt="youtube link" src="../images/icons/youtube.png">
+                </a>
+                <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
+                    <img class="social-media-icon" icon="instagram" alt="instagram link" src="../images/icons/instagram.png">
+                </a>
+                <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
+                    <img class="social-media-icon" icon="facebook" alt="facebook link" src="../images/icons/facebook.png">
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
