--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,27 @@
         <script src="../script/general.js"></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <div class="header-container">
+                <div class="header-wrapper">
+                    <div class="navbar-toggle">
+                        <img class="navbar-icon" src="../images/icons/bars.png">
+                    </div>
+                    <div class="logo-container">
+                        <a href="index.html">
+                            <img src="../images/logos/never-transparent.png" alt="Never" class="header-logo">
+                        </a>
+                    </div>
+                </div>
+                <nav class="navbar-wrapper">
+                    <a class="nav-link" href="about.html">about us</a>
+                    <a class="nav-link" href="members.html">members</a>
+                    <a class="nav-link" href="audition.html">audition</a>
+                    <a class="nav-link" href="contact.html">contact us</a>
+                    <a class="nav-link" href="faq.html">faq</a>
+                </nav>
+            </div>
+        </header>
         <main>
             <div class="main-container">
                 <div class="faq-container">
@@ -81,6 +101,21 @@
                 </div>
             </div>
         </main>
-        <footer class="footer-space"></footer>
+        <footer class="footer-space">
+            <div class="copyright">
+                &copy; 2020 Never Official
+            </div>
+            <div class="footer-links">
+                <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
+                    <img class="social-media-icon" icon="youtube" alt="youtube link" src="../images/icons/youtube.png">
+                </a>
+                <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
+                    <img class="social-media-icon" icon="instagram" alt="instagram link" src="../images/icons/instagram.png">
+                </a>
+                <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
+                    <img class="social-media-icon" icon="facebook" alt="facebook link" src="../images/icons/facebook.png">
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
