--- a/members.html
+++ b/members.html
@@ -16,12 +16,34 @@
         <script src="../script/members.js" defer></script>
     </head>
     <body class="fade">
-        <header></header>
+        <header>
+            <div class="header-container">
+                <div class="header-wrapper">
+                    <div class="navbar-toggle">
+                        <img class="navbar-icon" src="../images/icons/bars.png">
+                    </div>
+                    <div class="logo-container">
+                        <a href="index.html">
+                            <img src="../images/logos/never-transparent.png" alt="Never" class="header-logo">
+                        </a>
+                    </div>
+                </div>
+                <nav class="navbar-wrapper">
+                    <a class="nav-link" href="about.html">about us</a>
+                    <a class="nav-link" href="members.html">members</a>
+                    <a class="nav-link" href="audition.html">audition</a>
+                    <a class="nav-link" href="contact.html">contact us</a>
+                    <a class="nav-link" href="faq.html">faq</a>
+                </nav>
+            </div>
+        </header>
         <main>
             <div class="main-container">
                 <div class="title-wrapper transition-1">
                     <h3 class="page-title">Members</h3>
-                    <p>Meet our expressive team!</p>
+                    <p>Meet the team!<br>
+                        Select a member to see more details
+                    </p>
                     <hr class="title-divider">
                 </div>
                 <div class="member-container transition-2">
@@ -132,6 +154,8 @@
                 <div class="modal-list"></div>
             </div>
         </div>
-        <footer class="footer-space"></footer>
+        <footer class="footer-space">
+
+        </footer>
     </body>
 </html>
