--- a/about.html
+++ b/about.html
@@ -10,10 +10,32 @@
         <link rel="stylesheet" href="../styling/common/transition.css">
         <link rel="stylesheet" href="../styling/page/about.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
         <script src="../script/general.js"></script>
+        <script src="../script/about.js" defer></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <div class="header-container">
+                <div class="header-wrapper">
+                    <div class="navbar-toggle">
+                        <img class="navbar-icon" src="../images/icons/bars.png">
+                    </div>
+                    <div class="logo-container">
+                        <a href="index.html">
+                            <img src="../images/logos/never-transparent.png" alt="Never" class="header-logo">
+                        </a>
+                    </div>
+                </div>
+                <nav class="navbar-wrapper">
+                    <a class="nav-link" href="about.html">about us</a>
+                    <a class="nav-link" href="members.html">members</a>
+                    <a class="nav-link" href="audition.html">audition</a>
+                    <a class="nav-link" href="contact.html">contact us</a>
+                    <a class="nav-link" href="faq.html">faq</a>
+                </nav>
+            </div>
+        </header>
         <main>
             <div class="main-container">
                 <div class="main-wrapper">
@@ -28,10 +50,27 @@
                         We come together to create "any version" of various dance performances in different styles. 
                         Just like how fast the moon phases, our dancers adapt and learn quickly 
                     </p>
-                    <img class="group-picture transition-3" src="../images/group.jpg" alt="group photo">
+                    <div class="img-wrapper loading transition-3">
+                        <img class="group-picture" src="../images/group.jpg" alt="Never family picture">
+                    </div>
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="copyright">
+                &copy; 2020 Never Official
+            </div>
+            <div class="footer-links">
+                <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
+                    <img class="social-media-icon" icon="youtube" alt="youtube link" src="../images/icons/youtube.png">
+                </a>
+                <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
+                    <img class="social-media-icon" icon="instagram" alt="instagram link" src="../images/icons/instagram.png">
+                </a>
+                <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
+                    <img class="social-media-icon" icon="facebook" alt="facebook link" src="../images/icons/facebook.png">
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
